<resources>
    <string name="app_name">NASA Power</string>

    <string name="Title">The POWER Project</string>
    <string name="Description">Provides solar and meteorological data sets from NASA research for support of renewable energy</string>
    <string name="Support">Supported by NASA Earth Science’s Applied Sciences Program</string>

    <string name="Location">Select location</string>
    <string name="Information_1">- Choose a location by pointing on the map</string>
    <string name="Information_2">- Define the "Start" and "End" date</string>
    <string name="Information_3">- Write your electricity consumption: Electric power (KWh) and value paid ($)</string>
    <string name="Information_4">- Get data and specifications to purchase Solar Panels the best way!</string>

    <string name="Info">More information (Go to WebPage)</string>

    <string name="Link1"><a href="https://www.energy.gov/solar">U.S. Department of Energy</a></string>
    <string name="Link2"><a href="https://power.larc.nasa.gov/">The POWER Project</a></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Info_Fragment">Where do you want to know information?</string>
    <string name="title_activity_map_google">Map</string>

    <string name="Claro_Oscuro">Light/Dark Mode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Location_Info">Where do you want to know information?</string>

    <string name="Titulo_Parametros">Choose what you want to see!</string>
    <string name="Ahorro">Ahorro energético</string>
    <string name="Temperatura">Temperatura</string>
    <string name="Humedad">Humedad específica</string>
    <string name="Irradiacion">Irradiación solar</string>
    <string name="Viento">Velocidad del viento a 10m</string>

    <string name="Time">Time Extent</string>
    <string name="Start">Start</string>
    <string name="End">End</string>
    <string name="Consumo_electrico">Electricity consumption</string>
    <string name="Potencia">Power (KWh)</string>
    <string name="Valor">Value ($)</string>
    <string name="Area">Area (m2)</string>
    <string name="Results">Get Results!</string>

    <string name="Text_Prueba">Power generated from the panels:345W
        Approximate savings in one year:$45.51
        Approximate savings in 10 years:$451.1</string>

</resources>